# SDCS

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: find_Protobuf_and_gRPC.cmake
src/: CMakeLists.txt  main.cpp
src/database/: CMakeLists.txt  database_guard.cpp
src/include/: client_rpc.h  database_guard.h  server_rpc.h  sever_rpc.h
src/rpc/: CMakeLists.txt  client_rpc.cpp  server_rpc.cpp  sever_rpc.cpp
src/rpc/proto/: CMakeLists.txt  sdcs.proto
